force-app/main/default/objects/Parent__c/fields/AAdhar_Number__c.field-meta.xml
<CustomField>
    <fullName>AAdhar_Number__c</fullName>
    <label>AAdhar Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>