force-app/main/default/objects/Parent__c/fields/Job_sector__c.field-meta.xml
<CustomField>
    <fullName>Job_sector__c</fullName>
    <label>Job sector</label>
    <length>18</length>
    <type>Text</type>
</CustomField>