force-app/main/default/objects/Parent__c/fields/ParentShip__c.field-meta.xml
<CustomField>
    <fullName>ParentShip__c</fullName>
    <label>ParentShip</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>