force-app/main/default/objects/Parent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_sector__c</columns>
    <columns>AAdhar_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>