force-app/main/default/objects/Parent__c/listViews/All_Parents.listView-meta.xml
<ListView>
    <fullName>All_Parents</fullName>
    <columns>NAME</columns>
    <columns>AAdhar_Number__c</columns>
    <columns>Salary__c</columns>
    <columns>Age__c</columns>
    <columns>Job_sector__c</columns>
    <columns>ParentShip__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Parents</label>
</ListView>